--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,9 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"id": "AI Tools",
+	"name": "AI Tools",
+	"version": "0.1.0",
+	"minAppVersion": "0.0.1",
+	"description": "AI tools to be used with obsidian",
+	"author": "Karim Mansour",
 	"isDesktopOnly": false
 }
